--- a/dispatcher/package.json
+++ b/dispatcher/package.json
@@ -14,11 +14,18 @@
     "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@microsoft/signalr": "^8.0.0",
+    "@reduxjs/toolkit": "^2.0.1",
     "antd": "^5.12.8",
+    "axios": "^1.6.5",
     "dnd-kit": "^0.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1"
+    "react-icons": "^5.0.1",
+    "react-query": "^3.39.3",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.21.1",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
