--- a/dispatcher/package.json
+++ b/dispatcher/package.json
@@ -18,14 +18,18 @@
     "@reduxjs/toolkit": "^2.0.1",
     "antd": "^5.12.8",
     "axios": "^1.6.5",
+    "dayjs": "^1.11.10",
     "dnd-kit": "^0.0.2",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.1",
-    "redux": "^5.0.1"
+    "react-useanimations": "^2.10.0",
+    "redux": "^5.0.1",
+    "typescript-cookie": "^1.0.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
