--- a/dispatcher/package.json
+++ b/dispatcher/package.json
@@ -16,11 +16,16 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@microsoft/signalr": "^8.0.0",
     "@reduxjs/toolkit": "^2.0.1",
+    "@tabler/icons-react": "^2.47.0",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "antd": "^5.12.8",
     "axios": "^1.6.5",
+    "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
     "dnd-kit": "^0.0.2",
+    "framer-motion": "^11.0.3",
     "jwt-decode": "^4.0.0",
+    "mini-svg-data-uri": "^1.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
@@ -29,6 +34,8 @@
     "react-router-dom": "^6.21.1",
     "react-useanimations": "^2.10.0",
     "redux": "^5.0.1",
+    "simplex-noise": "^4.0.1",
+    "tailwind-merge": "^2.2.1",
     "typescript-cookie": "^1.0.6"
   },
   "devDependencies": {
@@ -37,7 +44,7 @@
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
-    "autoprefixer": "^10.4.16",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
