--- a/dispatcher/package.json
+++ b/dispatcher/package.json
@@ -18,17 +18,20 @@
     "@reduxjs/toolkit": "^2.0.1",
     "@tabler/icons-react": "^2.47.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tsparticles/engine": "^3.2.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.2.1",
     "antd": "^5.12.8",
     "axios": "^1.6.7",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
     "dnd-kit": "^0.0.2",
-    "framer-motion": "^11.0.3",
+    "framer-motion": "^11.0.5",
     "jwt-decode": "^4.0.0",
     "mini-svg-data-uri": "^1.4.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "rc-virtual-list": "^3.11.4",
     "react-icons": "^5.0.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.1",
@@ -39,6 +42,7 @@
     "typescript-cookie": "^1.0.6"
   },
   "devDependencies": {
+    "@gradin/tailwindcss-scrollbar": "^3.0.1",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
